<?xml version='1.0' encoding='UTF-8' ?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>no.nav.foreldrepenger.felles</groupId>
        <artifactId>fp-bom</artifactId>
        <version>0.2.4</version>
    </parent>

    <groupId>no.nav.foreldrepenger.oppdrag</groupId>
    <artifactId>fpoppdrag</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>
    <name>FP Oppdrag :: Root</name>

    <modules>
        <module>migreringer</module>
        <module>kodeverk</module>
        <module>integrasjon</module>
        <module>simuleringslager</module>
        <module>domenetjenester</module>
        <module>web</module>
    </modules>

    <properties>
        <revision>1.0-SNAPSHOT</revision>
        <java.version>17</java.version>

        <felles.version>4.1.24</felles.version>
        <!-- Kontrakter -->
        <fpoppdrag-kontrakt.version>2.0_20190412163011_bb51d0e</fpoppdrag-kontrakt.version>
        <fp-kontrakter.version>6.1.19</fp-kontrakter.version>

        <!-- NAV -->

        <!-- Eksterne -->
        <woodstox.version>6.2.8</woodstox.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>no.nav.foreldrepenger.oppdrag</groupId>
                <artifactId>kodeverk</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>no.nav.foreldrepenger.oppdrag</groupId>
                <artifactId>integrasjon</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>no.nav.foreldrepenger.oppdrag</groupId>
                <artifactId>migreringer</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>no.nav.foreldrepenger.oppdrag</groupId>
                <artifactId>simuleringslager</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>no.nav.foreldrepenger.oppdrag</groupId>
                <artifactId>domenetjenester-organisasjon</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>no.nav.foreldrepenger.oppdrag</groupId>
                <artifactId>domenetjenester-person</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>no.nav.foreldrepenger.oppdrag</groupId>
                <artifactId>domenetjenester-simulering</artifactId>
                <version>${project.version}</version>
            </dependency>
            <!-- Intern Test -->
            <dependency>
                <groupId>no.nav.foreldrepenger.oppdrag</groupId>
                <artifactId>migreringer</artifactId>
                <version>${project.version}</version>
                <type>test-jar</type>
                <scope>test</scope>
            </dependency>

            <!-- Felles -->
            <dependency>
                <groupId>no.nav.foreldrepenger.felles</groupId>
                <artifactId>felles</artifactId>
                <version>${felles.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
            <dependency>
                <groupId>no.nav.foreldrepenger.felles</groupId>
                <artifactId>felles-feil</artifactId>
                <version>${felles.version}</version>
            </dependency>
            <dependency>
                <groupId>no.nav.foreldrepenger.felles.integrasjon</groupId>
                <artifactId>felles-integrasjon-pom</artifactId>
                <version>${felles.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
            <dependency>
                <groupId>no.nav.foreldrepenger.felles.integrasjon</groupId>
                <artifactId>felles-integrasjon-bom</artifactId>
                <version>${felles.version}</version>
            </dependency>

            <!-- Kontrakter -->
            <dependency>
                <groupId>no.nav.foreldrepenger.kontrakter</groupId>
                <artifactId>fpoppdrag-kontrakt-pom</artifactId>
                <version>${fpoppdrag-kontrakt.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>no.nav.foreldrepenger.kontrakter</groupId>
                <artifactId>okonomistotte-v1</artifactId>
                <version>${fpoppdrag-kontrakt.version}</version>
                <classifier>jaxb</classifier>
            </dependency>
            <dependency>
                <groupId>no.nav.foreldrepenger.kontrakter</groupId>
                <artifactId>fp-kontrakter-root</artifactId>
                <version>${fp-kontrakter.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>

            <!-- nav -->

            <dependency>
                <groupId>no.nav.oppdrag.tjenester</groupId>
                <artifactId>nav-system-os-simuler-fp-service-tjenestespesifikasjon</artifactId>
                <version>1.0.5</version>
                <classifier>jaxws</classifier>
            </dependency>

            <dependency>
                <!-- Transitive avhengighet resolution for å sikre bestemt versjon -->
                <groupId>com.fasterxml.woodstox</groupId>
                <artifactId>woodstox-core</artifactId>
                <version>${woodstox.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>com.oracle.ojdbc</groupId>
            <artifactId>ojdbc8</artifactId>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <configuration>
                    <flattenMode>bom</flattenMode>
                    <flattenedPomFilename>.flattened</flattenedPomFilename>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <executions>
                    <execution>
                        <id>enforce-versions</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireJavaVersion>
                                    <version>[11,)</version>
                                </requireJavaVersion>
                                <requireMavenVersion>
                                    <version>[3.6.1,)</version>
                                </requireMavenVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-deploy-plugin</artifactId>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <scm>
        <connection>scm:git:ssh://git@github.com:navikt/fpoppdrag.git</connection>
        <developerConnection>scm:git:ssh://git@github.com:navikt/fpoppdrag.git</developerConnection>
        <url>https://github.com/navikt/fpoppdrag</url>
    </scm>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>Github navikt Maven Packages</name>
            <url>https://maven.pkg.github.com/navikt/fpoppdrag</url>
        </repository>
    </distributionManagement>

</project>
